--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "deploy": "gh-pages -d dist"
+  },
+  "homepage": "https://rukkieCodes.github.io/ParticleRain",
   "dependencies": {
     "dat.gui": "^0.7.7",
     "gh-pages": "^3.1.0",
